--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=cl
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/CampusLink
-spring.datasource.username=postgres
-spring.datasource.password=Rex@4115
+spring.datasource.url=${JDBC_DB_URL}
+spring.datasource.username=${JDBC_DB_USER}
+spring.datasource.password=${JDBC_DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
